fix(html): tweak vertical alignment of `.navbar` items
The extra space allocated for the border given to selected
items makes the vertical alignment a few pixels off. Adjust
the padding of items to compensate for this.

While here, consolidate style for non-active `.navbar` items.

--- a/cl/assets/static-global/css/override.css
+++ b/cl/assets/static-global/css/override.css
@@ -33,20 +33,16 @@ header {
   margin-bottom: 0;
 }
 
-.navbar-nav > li > a {
+.navbar-default .navbar-nav > li a {
   padding-top: 13px;
-  padding-bottom: 13px;
+  padding-bottom: 10px;
+  border-bottom: 3px solid transparent;
+  color: #555555;
 }
 
 .navbar-default .navbar-nav > li.active a {
   background-color: transparent;
-  border-bottom: 3px solid #AE0B0B;
-}
-
-.navbar-default .navbar-nav > li a {
-  /* Layout fix. */
-  border-bottom: 3px solid transparent;
-  color: #555555;
+  border-bottom-color: #AE0B0B;
 }
 
 .subnav {
